add: gtest (gimli unittest) to make command; add make test for all tests; fix error in sphinx pdfdoc

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -85,6 +85,13 @@ ADD_CUSTOM_COMMAND(
         pgtest
    )
 
+add_test(
+    NAME
+        pgtest:pygimli_tests
+    COMMAND 
+        make pgtest
+    )
+
 #ADD_CUSTOM_TARGET(pgrebuild ALL)
 #add_dependencies(pgrebuild pggen _pygimli_)
 
