throw exception instead of segfault for vec sizes==0

--- a/tests/unittest/CMakeLists.txt
+++ b/tests/unittest/CMakeLists.txt
@@ -32,7 +32,9 @@ if (CPPUNIT_FOUND)
             gtest
     )
 
+    add_dependencies(gimliUnitTest gimli)
     add_dependencies(gtest gimliUnitTest)
+    
 
     add_test(
         NAME
