--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -77,10 +77,8 @@ ADD_CUSTOM_TARGET(pgtest)
 ADD_CUSTOM_COMMAND(
     COMMAND
         ${PYTHON_EXECUTABLE}
-        #python -c "import pygimli; pygimli.test(show=False)"
-        #python 
     ARGS
-        -c 'import pygimli\; pygimli.test(show=False)'
+        -c "import pygimli\; pygimli.test(show=False)"
     TARGET
         pgtest
    )
