#33 add the core package

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -44,15 +44,15 @@ if(WIN32)
     ADD_CUSTOM_TARGET(pgcopydll ALL)
     ADD_CUSTOM_COMMAND(
         COMMAND
-            cp ${CMAKE_BINARY_DIR}/bin/*.dll ${CMAKE_CURRENT_SOURCE_DIR}/pygimli
+            cp ${CMAKE_BINARY_DIR}/bin/*.dll ${CMAKE_CURRENT_SOURCE_DIR}/pygimli/core
         TARGET
             pgcopydll
         COMMENT
-            "Updating needed dll. build/bin/*dll -> trunk/python/pygimli"
+            "Updating needed dll. build/bin/*dll -> trunk/python/pygimli/core"
     )
 endif(WIN32)
 
-add_python_module(pygimli "${CMAKE_CURRENT_BINARY_DIR}/generated/" "gimli" "${CMAKE_CURRENT_SOURCE_DIR}/pygimli/")
+add_python_module(pygimli "${CMAKE_CURRENT_BINARY_DIR}/generated/" "gimli" "${CMAKE_CURRENT_SOURCE_DIR}/pygimli/core")
 
 
 add_dependencies(pggen gimli)
