--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -101,7 +101,7 @@ add_custom_target(sphinxhtml ALL
         cmake -E copy_directory ${DOXYGEN_BUILD_DIR}/html ${SPHINX_HTML_DIR}/gimliapi
      COMMAND
         ${SPHINX_EXECUTABLE} -v
-        -D plot_gallery=1
+        -D abort_on_example_error=1
         -T
         -b html
         -c "${SPHINX_BUILD_DIR}/doc"
