--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -25,6 +25,7 @@
 #define UMFPACK_FOUND @UMFPACK_FOUND@
 
 #define OPENBLAS_FOUND @OPENBLAS_FOUND@
+#define CONDA_BUILD @CONDA_BUILD@
 
 #define USE_IPC @USE_IPC@
 
