add: Simple 2.5D ERT totalfield FOP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -207,6 +207,7 @@ find_or_build_package(UMFPACK umfpack)
 
 if (";${BLAS_LIBRARIES};" MATCHES "openblas")
     message(STATUS "openblas is used: ${BLAS_LIBRARIES}")
+    message(STATUS "openblas is used: ${PC_BLAS_INCLUDE_DIRS}")
     set(OPENBLAS_FOUND TRUE)
 else()
     set(OPENBLAS_FOUND FALSE)
