--- a/.prospector.yml
+++ b/.prospector.yml
@@ -5,3 +5,9 @@ pylint:
         - E1101 # avoids errors about missing C++ members in pygimli
         - E0611 # avoids errors about missing C++ members in pygimli
         - E0602 # avoids errors about unassigned function calls, i.e. _pygimli_.load
+    options:
+        max-args: 10
+        max-locals: 50
+        max-branches: 50
+        max-statements: 100
+        max-attributes: 10
