--- a/.landscape.yml
+++ b/.landscape.yml
@@ -27,12 +27,19 @@ pylint:
         - E1101 # avoids errors about missing C++ members in pygimli
         - E0611 # avoids errors about missing C++ members in pygimli
         - E0602 # avoids errors about unassigned function calls, i.e. _pygimli_.load
+        - R0204 #
+        - C0413 # module level import not at top of file
+        - E0401 #
     options:
         max-args: 10
         max-locals: 50
         max-branches: 50
         max-statements: 100
         max-attributes: 10
+
+pep8:
+    disable:
+        - E402 # same as pylint C0413
 
 pyflakes:
     disable:
