add colorBar update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -358,8 +358,15 @@ if (SPHINX_FOUND)
 
 endif()
 
-ADD_CUSTOM_TARGET(checkall)
-add_dependencies(checkall doc)
+add_custom_target(removedoc
+   COMMAND
+       ${CMAKE_MAKE_PROGRAM} clean -f ${CMAKE_CURRENT_BINARY_DIR}/doc/
+)
+add_custom_target(checkall
+    DEPENDS
+      doc
+)
+#add_dependencies(doc removedoc)
 
 # Add if pytest found?
 add_dependencies(checkall pgtest)
@@ -367,11 +374,6 @@ if (CPPUNIT_FOUND)
     add_dependencies(checkall gtest)
 endif (CPPUNIT_FOUND)
 
-add_custom_target(removedoc
-    COMMAND
-        cmake -E remove_directory ${CMAKE_CURRENT_BINARY_DIR}/doc
-)
-add_dependencies(checkall removedoc)
 
 ################################################################################
 # Define the configurable options
