add better check for python3 binary in buildThirdParty, add proper python-include dir for mingw build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,10 @@ if (PYVERSION)
 endif()
 find_package(PythonInterp) # find version belongs to the active python command
 
+if(WIN32)
+    find_package(PythonLibs)
+endif(WIN32)
+
 function(find_boost_from_distname_file)
     set (BOOST_DIST_NAME_FILE "${EXTERNAL_DIR}/.boost-py${PYTHON_VERSION_MAJOR}.dist")
 
@@ -252,7 +256,7 @@ if (WIN32)
     endif()
 	#set (PYTHON_LIBRARY ${PYTHONPATH}/libs/python${PYTHON_VERSION_MAJOR}${PYTHON_VERSION_MINOR}.lib)
     #set (PYTHON_LIBRARY ${PYTHONPATH}/libs/libpython${PYTHON_VERSION_MAJOR}${PYTHON_VERSION_MINOR}.a)
-	set (PYTHON_INCLUDE_DIR ${PYTHONPATH}/include)
+	#set (PYTHON_INCLUDE_DIR ${PYTHONPATH}/include)
 else()
 	set(Python_ADDITIONAL_VERSIONS ${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR})
 	set(PythonLibs_FIND_VERSION ${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR})
@@ -328,11 +332,14 @@ endif()
 message(STATUS "**********************************************************************")
 message(STATUS "************************* Dependencies found *************************")
 message(STATUS "**********************************************************************")
-message(STATUS "CHOLMOD_LIBRARIES  : ${CHOLMOD_LIBRARIES}")
-message(STATUS "UMFPACK_LIBRARIES  : ${UMFPACK_LIBRARIES}")
+message(STATUS "CHOLMOD_LIBRARIES  :${CHOLMOD_LIBRARIES}")
+message(STATUS "UMFPACK_LIBRARIES  :${UMFPACK_LIBRARIES}")
 message(STATUS "TRIANGLE_FOUND     :${TRIANGLE_FOUND}    Triangle_LIBRARIES: ${Triangle_LIBRARIES}")
 message(STATUS "PYTHON_FOUND       :${PYTHON_FOUND}    PYTHON_EXECUTABLE: ${PYTHON_EXECUTABLE}" )
 message(STATUS "PYTHONLIBS_FOUND   :${PYTHONLIBS_FOUND}    PYTHON_LIBRARY: ${PYTHON_LIBRARY}" )
+if(WIN32)
+message(STATUS "PYTHON_INCLUDE_DIR                          :${PYTHON_INCLUDE_DIR}" )
+endif(WIN32)
 message(STATUS "Boost_PYTHON_FOUND :${Boost_PYTHON_FOUND}    Boost_PYTHON_LIBRARIES: ${Boost_PYTHON_LIBRARIES}" )
 message(STATUS "numpy_FOUND        :${numpy_FOUND}    PY_NUMPY: ${PY_NUMPY}" )
 message(STATUS "CASTER_FOUND       :${CASTER_FOUND}    Caster: ${CASTER_EXECUTABLE}")
