#53. Add thread check to build system. Need testing on how to react on this check.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,7 @@ if(NOT EXTERNAL_DIR)
 endif()
 
 include(CheckIncludeFileCXX)
+find_package(Threads REQUIRED)
 
 if (PYVERSION)
     set(Python_ADDITIONAL_VERSIONS ${PYVERSION})
