renamed Boost_Python_LIBRARIES -> Boost_PYTHON_LIBRARY

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -277,7 +277,7 @@ find_package(PythonLibs)
 find_python_module(numpy)
 
 if (Boost_PYTHON_LIBRARY)
-    set (Boost_PYTHON_LIBRARIES ${Boost_PYTHON_LIBRARY})
+    #set (Boost_PYTHON_LIBRARY ${Boost_PYTHON_LIBRARY})
 else()
     #find_package(Boost 1.46.0 COMPONENTS python)
 
@@ -288,7 +288,7 @@ else()
     find_package(Boost 1.46 COMPONENTS "python-py${bp_version}")
     if (${Boost_PYTHON-PY${bp_version}_FOUND})
         set(Boost_PYTHON_FOUND ${Boost_PYTHON-PY${bp_version}_FOUND})
-        set(Boost_PYTHON_LIBRARIES ${Boost_PYTHON-PY${bp_version}_LIBRARY_RELEASE})
+        set(Boost_PYTHON_LIBRARY ${Boost_PYTHON-PY${bp_version}_LIBRARY_RELEASE})
     endif()
 
     if (NOT Boost_PYTHON_FOUND)
@@ -296,7 +296,7 @@ else()
         find_package(Boost 1.46 COMPONENTS "python${bp_version}")
         if (${Boost_PYTHON${bp_version}_FOUND})
             set(Boost_PYTHON_FOUND ${Boost_PYTHON${bp_version}_FOUND})
-            set(Boost_PYTHON_LIBRARIES ${Boost_PYTHON${bp_version}_LIBRARY_RELEASE})
+            set(Boost_PYTHON_LIBRARY ${Boost_PYTHON${bp_version}_LIBRARY_RELEASE})
         endif()
     endif()
 
@@ -367,7 +367,7 @@ if (PYTHON_EXECUTABLE)
     set (PYTHON_FOUND TRUE)
 endif()
 
-if (Boost_PYTHON_LIBRARIES)
+if (Boost_PYTHON_LIBRARY)
     set (Boost_PYTHON_FOUND TRUE)
 endif()
 
@@ -383,7 +383,7 @@ message(STATUS "PYTHONLIBS_FOUND   :${PYTHONLIBS_FOUND}    PYTHON_LIBRARY: ${PYT
 if(WIN32)
 message(STATUS "PYTHON_INCLUDE_DIR                          :${PYTHON_INCLUDE_DIR}" )
 endif(WIN32)
-message(STATUS "Boost_PYTHON_FOUND :${Boost_PYTHON_FOUND}    Boost_PYTHON_LIBRARIES: ${Boost_PYTHON_LIBRARIES}" )
+message(STATUS "Boost_PYTHON_FOUND :${Boost_PYTHON_FOUND}    Boost_PYTHON_LIBRARY: ${Boost_PYTHON_LIBRARY}" )
 message(STATUS "numpy_FOUND        :${numpy_FOUND}    PY_NUMPY: ${PY_NUMPY}" )
 message(STATUS "CASTER_FOUND       :${CASTER_FOUND}    Caster: ${CASTER_EXECUTABLE}")
 message(STATUS "PYGCCXML_FOUND     :${PYGCCXML_FOUND}    PYGCCXML: ${PYGCCXML_PATH}" )
