--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -125,8 +125,8 @@ foreach(program ${SCRIPTS})
 endforeach(program)
 
 if (WIN32)
-	file(COPY ${Boost_PYTHON_LIBRARIES} DESTINATION ${CMAKE_BINARY_DIR}/bin)
+	file(COPY ${Boost_PYTHON_LIBRARY} DESTINATION ${CMAKE_BINARY_DIR}/bin)
     #file(COPY ${Boost_THREAD_LIBRARIES} DESTINATION ${CMAKE_BINARY_DIR}/bin)
 	#file(COPY ${Boost_SYSTEM_LIBRARIES} DESTINATION ${CMAKE_BINARY_DIR}/bin)
-	install(PROGRAMS ${Boost_PYTHON_LIBRARIES} DESTINATION bin)
+	install(PROGRAMS ${Boost_PYTHON_LIBRARY} DESTINATION bin)
 endif()
